Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-1226

Handler not set on inbound connection

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-0.13.0, proton-0.14.0
    • proton-0.13.0
    • cpp-binding
    • None

    Description

      Historically, the handler was always specified before the connection was created so that the PN_CONNECTION_INIT could go to the correct handler, whereas the rest of the connection options could only be applied later, after creation.

      For inbound connections, the handler was set on the listener (pn_reactor_acceptor()) and the reactor set it for the accepted connections.

      History has changed. Nobody processes PN_CONNECTION_INIT except the global handler, so deferred setting of the handler is probably OK, allowing the handler to be set at the same time as the other non-transport options.

      Alternatively, the caller of on_accept() must separately apply the handler (which might change per connection on a listener) to make the new listen_handler interface work as intended.

      Attachments

        Activity

          People

            cliffjansen Clifford Jansen
            cliffjansen Clifford Jansen
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: