PROTON-1226: set handler directly on inbound connection configuration